--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@ body {
        color: #4D4D4D;
     }
 
+.dropdownfont{
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 510;
+  font-size: 15px;
+  line-height: 18px;
+  color: #779AF4;
+}
+
 #bg-blur{
   position: absolute;
   width: 100%;
@@ -22,9 +31,9 @@ body {
 #start{
   position: absolute;
   width: 179px;
-  height: 49px;
+  height: 51px;
   left: 110px;
-  top: 198px;
+  bottom: 149px;
 
   background: #779AF4;
   /* blue */
@@ -103,31 +112,31 @@ a{
 
 .body{
   position: absolute;
-  left: calc(50% - 4px);
-  top: calc(50% - 29px/2 - 30px);
   font-family: 'IBM Plex Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
-  line-height: 29px;
   text-align: center;
   color: #779AF4;
 }
 
 .timer{
+  margin: 0;
+  top: 154px;
   font-size: 24px;
 }
 
 .one{
-  left: calc(50% - 80px);
+  right: 204px;
+  text-align: right;
 }
 
 .two{
-  left: calc(50%);
+  left: 196px;
 }
 
 .three{
-  left: calc(50% + 12px);
+  left: 204px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -239,33 +248,30 @@ h1{
   cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
-
-
-
 /* Dropdown Content (Hidden by Default) */
 .dropdownco {
   display: none;
   visibility: hidden;
   position: absolute;
   background-color: #fff;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+  box-shadow: 0px 4px 9px rgba(164, 181, 226, 0.9);
   z-index: 1010;
   right: 16px;
   top: 16px;
+  border-radius: 8px;
 }
 
 /* Links inside the dropdown */
 .dropdownco a {
-  color: black;
-  padding: 4px 4px;
+  color: #779AF4;
+  padding: 6px 16px;
   text-decoration: none;
   display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdownco a:hover {background-color: #ddd}
+.dropdownco a:hover {background: rgba(125, 155, 233, 0.1);}
 
 /* second level of dropdown */
 .dropdowntwo {
@@ -273,29 +279,45 @@ h1{
   visibility: hidden;
   position: absolute;
   right: 160px;
-  top: 16px;
-  min-width: 160px;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 140px;
+  background-color: #fff;
+  box-shadow: 0px 4px 9px rgba(164, 181, 226, 0.9);
   z-index: 1020;
+  border-radius: 8px;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .dropdown:hover .dropdownco{
   display: block;
   visibility: visible;
-  padding: 10px;
+  padding: 6px 0;
   top: 32px;
 }
 
-.smth{
+#lvl1{
   height: 32px;
   width: 160px;
 }
 
-.smth:hover .dropdowntwo {
+#lvl1:hover .dropdowntwo {
   display: block;
   visibility: visible;
+  padding: 6px 0;
+  top: 6px;
+  right: 160px;
+}
+
+#lvl2{
+  height: 32px;
+  width: 160px;
+}
+
+#lvl2:hover .dropdowntwo {
+  display: block;
+  visibility: visible;
+  padding: 6px 0;
+  top: 36px;
+  right: 160px;
 }
 
 li{
